Fixed z-index for docs navigation

--- a/app/assets/scss/components/_docs.scss
+++ b/app/assets/scss/components/_docs.scss
@@ -3,7 +3,7 @@
 //////////////
 .docs-nav {
 	position: fixed;
-	z-index: 1;
+	z-index: 4;
 	top: 0;
 	left: 0;
 	max-height: 100%;
